--- a/public_html/.htaccess
+++ b/public_html/.htaccess
@@ -2,6 +2,10 @@ Header add Access-Control-Allow-Origin "*"
 Header add Access-Control-Allow-Headers "origin, x-requested-with, content-type, api_key"
 Header add Access-Control-Allow-Methods "PUT, GET, POST, DELETE"
 
+php_value upload_max_filesize 16M
+php_value post_max_size 16M 
+php_value memory_limit 128M 
+
 RewriteEngine On
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteRule ^ index.php [QSA,L]
