--- a/public_html/.htaccess
+++ b/public_html/.htaccess
@@ -1,6 +1,6 @@
 Header add Access-Control-Allow-Origin "*"
 Header add Access-Control-Allow-Headers "origin, x-requested-with, content-type, api_key"
-Header add Access-Control-Allow-Methods "PUT, GET, POST, DELETE"
+Header add Access-Control-Allow-Methods " GET, POST"
 
 php_value upload_max_filesize 16M
 php_value post_max_size 16M 
